bluefish (1.0.7-5) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Daniel Leidert (dale) <daniel.leidert@wgdd.de>  Fri, 08 Feb 2008 02:11:07 +0100

bluefish (1.0.7-4) unstable; urgency=low

  * debian/control: Added DM-Upload-Allowed for DM status.
    (Standards-Version): Raised to 3.7.3.
  * debian/rules: Added LDFLAGS to drop useless dependencies (should be safe
    here). Make sure, there are no unresolved symbols.
  * debian/patches/04_fix_maximization_state_save.dpatch: Added.
    - Fixes a long-time-standing bug, that prevents bluefish from saving the
      maximization state, if people quit with File > Quit.
  * debian/patches/05_fix_449288_hlt_pattern_dialog.dpatch: Added.
    - Fixes the empty highlighting pattern dialog (closes: #449288). Thanks to
      Jim Hayward for the patch.
  * debian/patches/00list: Adjusted.

 -- Daniel Leidert (dale) <daniel.leidert@wgdd.de>  Tue, 05 Feb 2008 03:03:47 +0100

bluefish (1.0.7-3) unstable; urgency=low

  * debian/bluefish.menu (section): Fixed to be compliant to the latest menu
    policy.
  * debian/bluefish.postrm: Removed. Replaced by debhelper script calls.
  * debian/bluefish.postinst: Ditto.
  * debian/compat: Raised to compat level 5.
  * debian/control: Homepage field transition.
    (Build-Depends): Raised debhelper version dependency.
    (Uploaders): Removed Leo, because I'm sponsored by someone else for some
    time now.
    (Suggests): Removed php4-cli and replaced mozilla with iceape | iceweasel.
  * debian/rules (binary-arch): Added calls to dh_installmime and dh_desktop
    to create postinst/postrm stuff automatically.
  * debian/watch: Added watch file.
  * debian/README.Debian: Added instructions, how to update filetype pattern.
  * debian/patches/03_latest_highlighting_pattern.dpatch: Added.
    - Update the filetypes list and the highlighting pattern to latest
      upstream version.
  * debian/patches/90_manpage_update.dpatch: Added.