@@ -21,6 +21,9 @@ endif
 
 config.status: configure
 	dh_testdir
+	[ ! -f /usr/share/misc/config.guess ] || cp -f /usr/share/misc/config.guess config.guess
+	[ ! -f /usr/share/misc/config.sub ] || cp -f /usr/share/misc/config.sub config.sub
+	[ ! -f /usr/share/gettext/config.rpath ] || cp -f /usr/share/gettext/config.rpath config.rpath
 	# Add here commands to configure the package.
 	LDFLAGS="$(LDFLAGS)" CFLAGS="$(CFLAGS)" ./configure \
 		--prefix=/usr \
@@ -44,26 +47,15 @@ build-stamp: patch-stamp config.status
 clean: unpatch
 	dh_testdir
 	dh_testroot
-	-rm -f build-stamp patch-stamp
-	
 	# Add here commands to clean up after the build process.
 	[ ! -f Makefile ] || $(MAKE) distclean
-	
-	-test -r /usr/share/misc/config.sub && \
-		cp -f /usr/share/misc/config.sub config.sub
-	-test -r /usr/share/misc/config.guess && \
-		cp -f /usr/share/misc/config.guess config.guess
-	-test -r /usr/share/gettext/config.rpath && \
-		cp -f /usr/share/gettext/config.rpath config.rpath
-	
-	dh_clean
+	dh_clean build-stamp patch-stamp
 
 install: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
-
 	# Add here commands to install the package into debian/bluefish.
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/$(PACKAGE)
 
